# platzi-sklearn

./: README.md  environment.yml  pyproject.toml
notebooks/: 02_jss_kpca.ipynb  03_jss_regularization.ipynb  04_jss_robust.ipynb  05_jss_bagging.ipynb  06_jss_boosting.ipynb  07_jss_kmeans.ipynb  08_jss_meanshift.ipynb  09_jss_cross_validation.ipynb  10_jss_randomized.ipynb  pca.ipynb
references/: 01_pca.py  02_kpca.py  03_regularizacion.py  04_robust.py  05_bagging.py  08_meanshift.py  09_cross_validation.py
utils/: paths.py
